# flense

./: .gitignore  README.md  index.html  package.json  vite.config.ts
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: cleaner.rs  commands.rs  errors.rs  external_tools.rs  history.rs  lib.rs  main.rs  metadata_scanner.rs  types.rs
src/components/: FileCard.tsx  HistoryCard.tsx  MetadataGroup.tsx  ProgressBar.tsx  Sidebar.tsx  StatCard.tsx  ToastProvider.tsx  TopBar.tsx  WorkflowBar.tsx  index.ts
src/styles/: components.css  global.css
src/types/: index.ts
src/utils/: tauri.ts
src/views/: CleanView.tsx  HistoryView.tsx  ScanView.tsx
