[package]
name = "metadata-cleaner"
version = "0.1.0"
description = "Scan, review, and safely remove privacy-sensitive metadata from files"
authors = ["Metadata Cleaner Contributors"]
license = "MIT"
repository = ""
edition = "2021"
rust-version = "1.77"

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
thiserror = "2"
anyhow = "1"
walkdir = "2"
tempfile = "3"
kamadak-exif = "0.5"
lopdf = "0.34"
id3 = "1"
metaflac = "0.2"
lebe = "0.5"
zip = { version = "2", default-features = false, features = ["deflate"] }
quick-xml = "0.37"
png = "0.17"
rusqlite = { version = "0.32", features = ["bundled"] }
chrono = { version = "0.4", features = ["serde"] }
sha2 = "0.10"
hex = "0.4"
uuid = { version = "1", features = ["v4"] }
image = "0.25"
dirs = "5"
futures = "0.3"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[features]
custom-protocol = ["tauri/custom-protocol"]
